# dataviz-desigualdade-renda

./: .gitignore  app.py  page_explorar.py  page_overview.py  page_poa.py  pyproject.toml  requirements.txt  shared.py  streamlit_app.py
.streamlit/: config.toml
poa_data/: README.md  build_poa.py  poa_setores.csv  poa_setores.geojson
