[project]
name = "dataviz-desigualdade-renda"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.3.0",
    "dash-bootstrap-components>=1.6.0",
    "gunicorn>=23.0.0",
    "pandas>=2.0.3",
    "plotly>=6.8.0",
    "pyarrow>=17.0.0",
    "requests>=2.32.4",
    "streamlit>=1.40.1",
]
